Array_string/compiling_error.txt
/home/avinash/Desktop/cracking_interview/Array_string/reverse_elemets_string.cpp:3:19: error: variable or field ‘reverseWords’ declared void
 void reverseWords(string s) {
                   ^
/home/avinash/Desktop/cracking_interview/Array_string/reverse_elemets_string.cpp:3:19: error: ‘string’ was not declared in this scope
/home/avinash/Desktop/cracking_interview/Array_string/reverse_elemets_string.cpp:3:19: note: suggested alternatives:
In file included from /usr/include/c++/5/iosfwd:39:0,
                 from /usr/include/c++/5/ios:38,
                 from /usr/include/c++/5/ostream:38,
                 from /usr/include/c++/5/iostream:39,
                 from /home/avinash/Desktop/cracking_interview/Array_string/reverse_elemets_string.cpp:1:
/usr/include/c++/5/bits/stringfwd.h:74:33: note:   ‘std::__cxx11::string’
   typedef basic_string<char>    string;   
                                 ^
/usr/include/c++/5/bits/stringfwd.h:74:33: note:   ‘std::__cxx11::string’
